--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.1.8",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
